# tauri-plugin-bin-ipc

./: Cargo.toml  README.md  deno.json
crates/core/: Cargo.toml
crates/core/src/: builder_ext.rs  error.rs  handler.rs  lib.rs  plugin_build_ext.rs  plugin_builder_ext.rs  protocol.rs
crates/core/src/secure_arena/: id.rs
crates/core/src/util/: mod.rs
crates/msgpack/: Cargo.toml
crates/msgpack-macro/: Cargo.toml
crates/msgpack-macro-impl/: Cargo.toml
crates/msgpack-macro-impl/src/: lib.rs
crates/msgpack-macro-impl/src/command/: impl_deref.rs  impl_msgpack_command.rs  invoke_fn.rs  mod.rs
crates/msgpack-macro-impl/src/generate_bin_handler/: mod.rs
crates/msgpack-macro-impl/src/generate_handler/: mod.rs
crates/msgpack-macro-test/: Cargo.toml
crates/msgpack-macro-test/src/: main.rs
crates/msgpack-macro/src/: lib.rs
crates/msgpack/src/: __deps.rs  command_deps.rs  de.rs  deps.rs  error.rs  flatten_join_handle.rs  lib.rs  or_future.rs  wrap_result.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/util/src/from_app_handle/: mod.rs  proxy.rs
examples/: .gitignore  Cargo.toml  deno.json
examples/deno/: build.ts  deno.json  index.html
examples/deno/src/: App.tsx  index.tsx  main.js
examples/deno/src-tauri/: Cargo.toml  tauri.conf.json
examples/deno/src-tauri/src/: main.rs
examples/msgpack-command/: build.ts  deno.json
examples/msgpack-command/public/: styles.css
examples/msgpack-command/src/: App.tsx
examples/msgpack-command/src-tauri/: Cargo.toml  tauri.conf.json
examples/msgpack-command/src-tauri/src/: main.rs
examples/simple/: build.ts  deno.json  index.css  tailwind.config.js
examples/simple/public/: hotreload.js
examples/simple/src/: App.tsx  index.tsx
examples/simple/src-tauri/: Cargo.toml  tauri.conf.json
examples/simple/src-tauri/src/: main.rs  plugin.rs
examples/vanilla/: package.json
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: bin_ipc_stream.rs  channel.rs  channel_credentials.rs  connection.rs  error.rs  event_emitter.rs  handler.rs  lib.rs  listener.rs  plugin_build_ext.rs  plugin_builder_bin_ipc_extension.rs  request_path.rs  state.rs
src-ts/: bin_ipc_stream.ts  connection.ts  core.ts  mod.ts  msgpack.ts  util.ts
src/secure_arena/: mod.rs
src/util/: mod.rs
