[package]
name = "tauri-plugin-bin-ipc"
version = "0.2.0"
authors = ["maemon4095"]
description = "binary ipc via custom protocol"
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1", features = ["shell-open", "http-api"] }
pigeonhole = { git = "https://github.com/maemon4095/pigeonhole-rs.git", branch = "release/v0.3.0" }
rand = "0.8"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
