[package]
name = "tauri-plugin-bin-ipc"
description = "binary ipc via custom protocol"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
exclude = ["/examples"]

[workspace.package]
rust-version = "1.60"
edition = "2021"
version = "0.2.0"
authors = ["maemon4095"]

[workspace]
members = ["crates/*"]
resolver = "2"

[features]
default = ["msgpack"]
msgpack = ["dep:msgpack"]

[dependencies]
core = { package = "tauri-plugin-bin-ipc-core", path = "crates/core" }
msgpack = { package = "tauri-plugin-bin-ipc-msgpack", path = "crates/msgpack", optional = true }

[workspace.dependencies]
tauri = { version = "1", features = ["shell-open", "http-api"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
