[package]
name = "tauri-plugin-bin-ipc-core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
tauri.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
pigeonhole = { git = "https://github.com/maemon4095/pigeonhole-rs.git", branch = "release/v0.5.0" }
