[package]
name = "tauri-plugin-bin-ipc-msgpack-macro-impl"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
prettyplease = "0.2"
