[package]
name = "simple"
version = "0.1.0"
description = "tauri-plugin-bin-ipc simple example"
authors = ["maemon4095"]
license = "MIT"
default-run = "simple"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["os-all"] }
tauri-plugin-bin-ipc = { workspace = true }
chrono = "0.4.31"
tokio = "1"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
